# iptool

./: .gitignore  LICENSE  README.md  README.rst  cspell.json  pyproject.toml
iptool/: __init__.py  __main__.py  cli.py  ip.py  utils.py
iptool/mask/: __init__.py  __main__.py
iptool/subnet/: __init__.py  __main__.py
iptool/summarize/: __init__.py  __main__.py
iptool/tests/: __init__.py
tests/: mask_data.json  mask_data.py  subnet_data.py  test_cli.py  test_mask.py  test_mask_cli.py  test_subnet.py  test_subnet_cli.py  test_tests.py
