[tool.poetry]
name = "iptool"
version = "0.1.0"
description = "CLI Tools for Managing IP Addresses and Related Objects."
authors = ["Matthew Wyant <me@matthewwyant.com>"]
license = "GPL-3.0-plus"
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.scripts]
iptool = 'iptool.__main__:cli_main'
mask = 'iptool.mask.__main__:cli_mask'
cidr = 'iptool.mask.__main__:cli_mask'       # Legacy alias for 'mask'
subnet = 'iptool.subnet.__main__:cli_subnet'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.6.0"
click-default-group = "^1.2.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"
pytest = "^7.4.2"
ruff = "^0.0.292"

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = ["F401", "F841"]

# good-names-rgxs = ["^[a-z_][a-z]?"]
# no-docstring-rgx = "^_|[Tt]est|[Mm]ock"

[tool.ruff.per-file-ignores]
"test_*.py" = ["D103"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
